@@ -1,5 +1,6 @@
 from itertools import islice
 
+
 def chunk(it, size):
     it = iter(it)
     return iter(lambda: tuple(islice(it, size)), ())
