@@ -13,6 +13,7 @@
 * Neue Charakter-Sprites für Grunzi mit Animationen hinzugefügt
 * Huhn-Sprite durch animierte Sprites ersetzt
 * Qualität der Sprite-Skalierung verbessert
+* Performance: MapPopulator ist jetzt asynchron
 
 # Alpha 020 (26.10.2024)
 
